--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 </div>
             </div>
         </article>
+    </section>
+    <section class="main">
         <article class="cardsList">
             <div class="titleList background-verde">
                 <h1>Categorias</h1>
