Finalizando site para desktop

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <article class="cards">
             <div class="titleMain background-verde">
                 <h1>Posts mais recentes</h1>
-                <p>Ver todos</p>
+                <p><a href="./index.html" style="color:white; text-decoration: underline;">Ver todos</a></p>
             </div>
             <div class="cardPost">
                 <div class="card">
@@ -106,18 +106,16 @@
                 </div>
             </div>
         </article>
-    </section>
-    <section class="main">
         <article class="cardsList">
             <div class="titleList background-verde">
                 <h1>Categorias</h1>
             </div>
             <div class="cardNameAndNumber">
                 <ul id="names">
-                    <li>> Saúde</li>
-                    <li>> Desenvolvimento</li>
-                    <li>> Produtividade</li>
-                    <li>> Opnião</li>
+                    <li><a href="./index.html">> Saúde</a></li>
+                    <li><a href="./index.html">> Desenvolvimento</a></li>
+                    <li><a href="./index.html">> Produtividade</a></li>
+                    <li><a href="./index.html">> Opnião</a></li>
                 </ul>
                 <ul id="number">
                     <li>(1)</li>
@@ -127,6 +125,12 @@
                 </ul>
             </div>
         </article>
+    </section>
+
+    <section class="container">
+        <div class="footer background-verde">
+            <h5>Copyright@The Dev News</h5>
+        </div>
     </section>
 </body>
 </html>
