--- a/index.html
+++ b/index.html
@@ -10,126 +10,123 @@
     <title>RID 218186 Desafio 2 Responsividade</title>
 </head>
 <body>
-    <section class="container  background-verde">
-        <div id="navBar">
-            <h1>The Dev News</h1>
-        </div>
+    <section class="navBar  background-verde">
+            <div id="navBar">
+                <h1>The Dev News</h1>
+            </div>
     </section>
-
     <section class="container">
-        <div class="sectionSideCard">
-            <div id="banner">
-            </div>
-            <div class="sideCard">
-                <div>
-                    <h2 class="posts background-verde">Posts populares</h2>
+            <div class="sectionSideCard">
+                <div id="banner">
                 </div>
-                <article class="articleSideCard">
-                    <div class="articleSideCardDetails">
-                        <h5>Desenvolvimento atual</h5>
-                        <p>22 Agosto 2022</p>
+                <div class="sideCard">
+                    <div>
+                        <h2 class="posts background-verde">Posts populares</h2>
                     </div>
-                    <img src="./assets/image-article1.svg" alt="VISH">
-                </article>
-                <article class="articleSideCard">
-                    <div class="articleSideCardDetails">
-                        <h5>GitLab bs GitHub</h5>
-                        <p>22 agosto 2022</p>
-                    </div>
-                    <img src="./assets/image-article2.svg" alt="">
-                </article>
-                <article class="articleSideCard">
-                    <div class="articleSideCardDetails">
-                        <h5>Café atrapalha?</h5>
-                        <p>22 Agosto 2022</p>
-                    </div>
-                    <img src="./assets/image-article3.svg" alt="">
-                </article>
+                    <article class="articleSideCard">
+                        <div class="articleSideCardDetails">
+                            <h5>Desenvolvimento atual</h5>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                        <img src="./assets/image-article1.svg" alt="VISH">
+                    </article>
+                    <article class="articleSideCard">
+                        <div class="articleSideCardDetails">
+                            <h5>GitLab bs GitHub</h5>
+                            <p>22 agosto 2022</p>
+                        </div>
+                        <img src="./assets/image-article2.svg" alt="">
+                    </article>
+                    <article class="articleSideCard">
+                        <div class="articleSideCardDetails">
+                            <h5>Café atrapalha?</h5>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                        <img src="./assets/image-article3.svg" alt="">
+                    </article>
+                </div>
             </div>
-        </div>
     </section>
-
     <section class="main">
-        <article class="cards">
-            <div class="titleMain background-verde">
-                <h1>Posts mais recentes</h1>
-                <p><a href="./index.html" style="color:white; text-decoration: underline;">Ver todos</a></p>
-            </div>
-            <div class="cardPost">
-                <div class="card">
-                    <img src="./assets/post-banner1.svg" alt="VISH">
-                    <div class="texts">
-                        <h6>Desenvolvimento</h6>
-                        <h2>Desenvolvimento</h2>
-                        <h3><b>By</b> Fabio Tetsuo</h3>
-                        <p>orem ipsum dolor sit amet consectetur. In vitae urna commodo amet congue 
-                            integer dapibus. Interdum semper mauris convallis fusce enim odio. Vitae 
-                            montes ridiculus felis.</p>
-                        <h5 class="date">22 Agosto 2022</h5>
+            <article class="cards">
+                <div class="titleMain background-verde">
+                    <h1>Posts mais recentes</h1>
+                    <p><a href="./index.html" style="color:white; text-decoration: underline;">Ver todos</a></p>
+                </div>
+                <div class="cardPost">
+                    <div class="card">
+                        <img src="./assets/post-banner1.svg" alt="VISH">
+                        <div class="texts">
+                            <h6>Desenvolvimento</h6>
+                            <h2>Desenvolvimento</h2>
+                            <h3><b>By</b> Fabio Tetsuo</h3>
+                            <p>orem ipsum dolor sit amet consectetur. In vitae urna commodo amet congue 
+                                integer dapibus. Interdum semper mauris convallis fusce enim odio. Vitae 
+                                montes ridiculus felis.</p>
+                            <h5 class="date">22 Agosto 2022</h5>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/post-banner2.svg" alt="VISH">
+                        <div class="texts">
+                            <h6>Saúde</h6>
+                            <h2>Balancear vida profissional e pessoal</h2>
+                            <h3><b>By</b> Ridho Satriawan</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur. Et consectetur at consectetur sed 
+                                nisl tempor.</p>
+                            <h5 class="date">22 Agosto 2022</h5>
+                    </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/post-banner3.svg" alt="VISH">
+                        <div class="texts">
+                            <h6>Desenvolvimento</h6>
+                            <h2>Configurando VSCode</h2>
+                            <h3><b>By</b> Fabio Tetsuo</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur. Erat interdum tortor ac sagittis 
+                                id a etiam. Tellus vitae arcu dignissim massa aliquam vel tellus. Ipsum 
+                                massa arcu nulla sed purus in ac.</p>
+                            <h5 class="date">22 Agosto 2022</h5>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/post-banner4.svg" alt="VISH">
+                        <div class="texts">
+                            <h6>Produtividade</h6>
+                            <h2>2 monitores ou 1 ultrawide ?</h2>
+                            <h3><b>By</b> Fulano da Silva</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur. Arcu tellus adipiscing sagittis 
+                                tristique. Eget molestie posuere enim pretium venenatis nunc ligula donec 
+                                a. Velit senectus amet nulla.</p>
+                            <h5 class="date">22 Agosto 2022</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="./assets/post-banner2.svg" alt="VISH">
-                    <div class="texts">
-                        <h6>Saúde</h6>
-                        <h2>Balancear vida profissional e pessoal</h2>
-                        <h3><b>By</b> Ridho Satriawan</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur. Et consectetur at consectetur sed 
-                            nisl tempor.</p>
-                        <h5 class="date">22 Agosto 2022</h5>
+            </article>
+            <article class="cardsList">
+                <div class="titleList background-verde">
+                    <h1>Categorias</h1>
                 </div>
+                <div class="cardNameAndNumber">
+                    <ul id="names">
+                        <li><a href="./index.html">> Saúde</a></li>
+                        <li><a href="./index.html">> Desenvolvimento</a></li>
+                        <li><a href="./index.html">> Produtividade</a></li>
+                        <li><a href="./index.html">> Opnião</a></li>
+                    </ul>
+                    <ul id="number">
+                        <li>(1)</li>
+                        <li>(2)</li>
+                        <li>(2)</li>
+                        <li>(1)</li>
+                    </ul>
                 </div>
-                <div class="card">
-                    <img src="./assets/post-banner3.svg" alt="VISH">
-                    <div class="texts">
-                        <h6>Desenvolvimento</h6>
-                        <h2>Configurando VSCode</h2>
-                        <h3><b>By</b> Fabio Tetsuo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur. Erat interdum tortor ac sagittis 
-                            id a etiam. Tellus vitae arcu dignissim massa aliquam vel tellus. Ipsum 
-                            massa arcu nulla sed purus in ac.</p>
-                        <h5 class="date">22 Agosto 2022</h5>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/post-banner4.svg" alt="VISH">
-                    <div class="texts">
-                        <h6>Produtividade</h6>
-                        <h2>2 monitores ou 1 ultrawide ?</h2>
-                        <h3><b>By</b> Fulano da Silva</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur. Arcu tellus adipiscing sagittis 
-                            tristique. Eget molestie posuere enim pretium venenatis nunc ligula donec 
-                            a. Velit senectus amet nulla.</p>
-                        <h5 class="date">22 Agosto 2022</h5>
-                    </div>
-                </div>
-            </div>
-        </article>
-        <article class="cardsList">
-            <div class="titleList background-verde">
-                <h1>Categorias</h1>
-            </div>
-            <div class="cardNameAndNumber">
-                <ul id="names">
-                    <li><a href="./index.html">> Saúde</a></li>
-                    <li><a href="./index.html">> Desenvolvimento</a></li>
-                    <li><a href="./index.html">> Produtividade</a></li>
-                    <li><a href="./index.html">> Opnião</a></li>
-                </ul>
-                <ul id="number">
-                    <li>(1)</li>
-                    <li>(2)</li>
-                    <li>(2)</li>
-                    <li>(1)</li>
-                </ul>
-            </div>
-        </article>
+            </article>
     </section>
-
-    <section class="container">
-        <div class="footer background-verde">
-            <h5>Copyright@The Dev News</h5>
-        </div>
+    <section class="footerMain">
+            <div class="footer background-verde">
+                <h5>Copyright@The Dev News</h5>
+            </div>
     </section>
 </body>
 </html>
