--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>RID 218186 Desafio 2 Responsividade</title>
 </head>
 <body>
-    <section class="navBar  background-verde">
+    <nav class="navBar  background-verde">
             <div id="navBar">
                 <h1>The Dev News</h1>
             </div>
-    </section>
+        </nav>
     <section class="container">
         <div class="sectionSideCard">
             <div id="banner">
@@ -111,10 +111,10 @@
             </div>
             <div class="cardNameAndNumber">
                 <ul id="names">
-                    <li><a href="./index.html">> Saúde</a></li>
-                    <li><a href="./index.html">> Desenvolvimento</a></li>
-                    <li><a href="./index.html">> Produtividade</a></li>
-                    <li><a href="./index.html">> Opnião</a></li>
+                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Saúde</a></li>
+                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Desenvolvimento</a></li>
+                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Produtividade</a></li>
+                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Opnião</a></li>
                 </ul>
                 <ul id="number">
                     <li>(1)</li>
