--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>The Dev News</h1>
             </div>
         </nav>
-    <section class="container">
+    <section class="container" id="popular">
         <div class="sectionSideCard">
             <div id="banner">
             </div>
@@ -67,7 +67,7 @@
                         <h5 class="date">22 Agosto 2022</h5>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="saude">
                     <img src="./assets/post-banner2.svg" alt="VISH">
                     <div class="texts">
                         <h6>Saúde</h6>
@@ -78,7 +78,7 @@
                         <h5 class="date">22 Agosto 2022</h5>
                 </div>
                 </div>
-                <div class="card">
+                <div class="card" id="desenvolvimento">
                     <img src="./assets/post-banner3.svg" alt="VISH">
                     <div class="texts">
                         <h6>Desenvolvimento</h6>
@@ -90,7 +90,7 @@
                         <h5 class="date">22 Agosto 2022</h5>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="produtividade">
                     <img src="./assets/post-banner4.svg" alt="VISH">
                     <div class="texts">
                         <h6>Produtividade</h6>
@@ -111,9 +111,9 @@
             </div>
             <div class="cardNameAndNumber">
                 <ul id="names">
-                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Saúde</a></li>
-                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Desenvolvimento</a></li>
-                    <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Produtividade</a></li>
+                    <li><a href="#saude" style="font-weight: 600; font-size:1rem;">> Saúde</a></li>
+                    <li><a href="#desenvolvimento" style="font-weight: 600; font-size:1rem;">> Desenvolvimento</a></li>
+                    <li><a href="#produtividade" style="font-weight: 600; font-size:1rem;">> Produtividade</a></li>
                     <li><a href="index.html" style="font-weight: 600; font-size:1rem;">> Opnião</a></li>
                 </ul>
                 <ul id="number">
